@@ -1,4 +1,5 @@
 Serf 0.1.2 []
+  Fix a memory leak with the socket bucket (Issue 14)
   Fix uninitialized branch in serf_spider (Issue 15)
 
 Serf 0.1.1 [2007-5-12, r1105]
